# iriclib

./: .gitignore  CMakeLists.txt  README-issue-18.md  README.md  appveyor.yml  filelocker.cpp  h5attributecloser.cpp  h5attributecloser.h  h5cgnsbase.cpp  h5cgnsbase.h  h5cgnsbaseiterativedata.cpp  h5cgnsbaseiterativedata.h  h5cgnsbc.cpp  h5cgnsbc.h  h5cgnscellflowsolution.cpp  h5cgnscellflowsolution.h  h5cgnsconditiongroup.cpp  h5cgnsconditiongroup.h  h5cgnsfile.cpp  h5cgnsfile.h  h5cgnsfiles.cpp  h5cgnsfiles.h  h5cgnsfileseparatesolutionutil.cpp  h5cgnsfileseparatesolutionutil.h  h5cgnsfilesolutionreader.cpp  h5cgnsfilesolutionreader.h  h5cgnsfilesolutionwriter.cpp  h5cgnsfilesolutionwriter.h  h5cgnsflowsolution.cpp  h5cgnsflowsolution.h  h5cgnsgeographicdatagroup.cpp  h5cgnsgeographicdatagroup.h  h5cgnsgeographicdatatop.cpp  h5cgnsgeographicdatatop.h  h5cgnsgridattributes.cpp  h5cgnsgridattributes.h  h5cgnsgridcomplexconditiongroup.cpp  h5cgnsgridcomplexconditiongroup.h  h5cgnsgridcomplexconditiontop.cpp  h5cgnsgridcomplexconditiontop.h  (+132 more)
.github/workflows/: build.yml
cgnslib_dummy/: CMakeLists.txt  cgnslib.c  cgnslib.h  cgnslib.pro
internal/: iric_h5cgnsfiles.cpp  iric_h5cgnsfiles.h  iric_logger.cpp  iric_logger.h  iric_outputerror.cpp  iric_outputerror.h  iric_util.cpp  iric_util.h
private/: h5cgnsbase_impl.cpp  h5cgnsbase_impl.h  h5cgnsbaseiterativedata_impl.cpp  h5cgnsbaseiterativedata_impl.h  h5cgnsbc_impl.cpp  h5cgnsbc_impl.h  h5cgnsconditiongroup_impl.cpp  h5cgnsconditiongroup_impl.h  h5cgnsfile_impl.cpp  h5cgnsfile_impl.h  h5cgnsfilesolutionreader_impl.cpp  h5cgnsfilesolutionreader_impl.h  h5cgnsfilesolutionwriter_impl.cpp  h5cgnsfilesolutionwriter_impl.h  h5cgnsflowsolution_impl.h  h5cgnsgeographicdatagroup_impl.cpp  h5cgnsgeographicdatagroup_impl.h  h5cgnsgeographicdatatop_impl.cpp  h5cgnsgeographicdatatop_impl.h  h5cgnsgridattributes_impl.cpp  h5cgnsgridattributes_impl.h  h5cgnsgridcomplexconditiongroup_impl.cpp  h5cgnsgridcomplexconditiongroup_impl.h  h5cgnsgridcomplexconditiontop_impl.cpp  h5cgnsgridcomplexconditiontop_impl.h  h5cgnsgridcoordinates_impl.cpp  h5cgnsgridcoordinates_impl.h  h5cgnsparticlegroupsolution_impl.cpp  h5cgnsparticlegroupsolution_impl.h  h5cgnsparticlesolution_impl.h  h5cgnspolydatasolution_impl.cpp  h5cgnspolydatasolution_impl.h  h5cgnssolverinformation_impl.cpp  h5cgnssolverinformation_impl.h  h5cgnszone_impl.cpp  h5cgnszone_impl.h  h5cgnszonebc_impl.cpp  h5cgnszonebc_impl.h  iriclib_cgnsfile_impl.h  iriclib_cgnsfile_solutionwriter.cpp  (+9 more)
public/: h5cgnsparticlegroupsolution_groupreader.cpp  h5cgnsparticlegroupsolution_groupreader.h  h5cgnspolydatasolution_groupreader.cpp  h5cgnspolydatasolution_groupreader.h
python_binding/: build.bat  iric.i  iric_custom.py
python_binding/unittests_cgnsfile/: run.py
python_binding/unittests_cgnsfile/data/: case_init.cgn  case_nogrid_hdf5.cgn
python_binding/unittests_cgnsfile/unittests/: case_bc.py  case_bc_nomul.py  case_calccond.py  case_calccond_nomul.py  case_check.py  case_complex.py  case_complex_nomul.py  case_grid.py  case_grid_nomul.py  case_init.py  case_initoption_check.py  case_initread.py  case_sol_readwrite.py  case_sol_readwrite_nomul.py  main.py  util.py
unittest_cg_open_modify/: CMakeLists.txt  README.md  main.cpp  unittest_cg_open_modify.pro
unittest_cg_open_read/: CMakeLists.txt  main.cpp  unittest_cg_open_read.pro
unittest_lock/: CMakeLists.txt  README.md  main.cpp  unittest_lock.pro
unittests/test1/: CMakeLists.txt  test1.f90
unittests/test1/data/: test_input_hdf5.cgn  test_ok_hdf5.cgn
unittests/test13/: test13.pro
unittests/test14/: Case1.cgn  test14.cpp  test14.pro
unittests_cgnsfile/: CMakeLists.txt  case_add_grid_and_result.cpp  case_bc.cpp  case_calccond.cpp  case_check.cpp  case_complex.cpp  case_grid.cpp  case_init.cpp  case_init_fm.cgn  case_init_hdf5.cgn  case_initcc.cpp  case_initoption_check.cpp  case_initread.cgn  case_initread.cpp  case_initread_hdf.cgn  case_no_grid_output.cpp  case_nogrid_hdf.cgn  case_nogrid_hdf5.cgn  case_read_adf.cgn  case_read_adf_no_sols.cgn  case_read_hdf5.cgn  case_read_hdf5_no_sols.cgn  case_sol_cell_readwrite.cpp  case_sol_readwrite.cpp  case_sol_startend.cpp  case_unst_hdf5.cgn  cases.h  fs_copy.h  main.cpp  unittests_cgnsfile.pro
unittests_h5/: CMakeLists.txt  fs_copy.h  macros.h  main.cpp  nays2dh.cgn  test_h5cgnsbase.cpp  test_h5cgnsfile.cpp  tests.h  unittests_h5.pro
util/: gen_code.py  gen_code_util.py  gen_f90.py  gen_ftoc.py  gen_not_mul.py  gen_not_withbaseid.py  gen_not_withgridid.py  gen_swig.py  gen_wrapper.py  iric.f90.footer.txt  iric.f90.header.txt  iric.i.header.txt  iric_custom.py.footer.txt  iric_custom.py.header.txt  iriclib_ftoc.cpp.footer.txt  iriclib_ftoc.cpp.header.txt  iriclib_not_mul.cpp.header.txt  iriclib_not_mul.h.footer.txt  iriclib_not_mul.h.header.txt  iriclib_not_withbaseid.cpp.header.txt  iriclib_not_withbaseid.h.footer.txt  iriclib_not_withbaseid.h.header.txt  iriclib_not_withgridid.cpp.header.txt  iriclib_not_withgridid.h.footer.txt  iriclib_not_withgridid.h.header.txt  iriclib_wrapper.cpp.header.txt  iriclib_wrapper.h.footer.txt  iriclib_wrapper.h.header.txt
